<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_weight="1"
        android:id="@+id/khohangLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp5"
        android:paddingBottom="@dimen/dp5">

        <ImageView
            android:layout_width="@dimen/dp48"
            android:layout_height="@dimen/dp48"
            android:src="@drawable/ic_khohang" />

        <TextView
            style="@style/textview_MainActivity_for_large_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kho_hang" />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp16"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/nhapHangLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dp8"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp48"
                android:layout_height="@dimen/dp48"
                android:src="@drawable/ic_nhaphang" />

            <TextView
                style="@style/textview_MainActivity_for_large_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nhap_hang" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/xuatHangLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp8"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp48"
                android:layout_height="@dimen/dp48"
                android:src="@drawable/ic_xuathang" />

            <TextView
                style="@style/textview_MainActivity_for_large_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xuat_hang" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:id="@+id/thongKeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp16"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dp48"
            android:layout_height="@dimen/dp48"
            android:src="@drawable/ic_thongke" />

        <TextView
            style="@style/textview_MainActivity_for_large_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thong_ke" />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:id="@+id/doiTacLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp16"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp5"
        android:paddingBottom="@dimen/dp5">

        <ImageView
            android:layout_width="@dimen/dp48"
            android:layout_height="@dimen/dp48"
            android:src="@drawable/ic_doitac" />

        <TextView
            style="@style/textview_MainActivity_for_large_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doi_tac" />

    </LinearLayout>


</LinearLayout>
